fixed some variables to align with the code and fixed the inspect error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,3 +29,9 @@ body {
 	padding-top: 50px;
 	padding-bottom: 25px;
 }
+/* fixing the image portion of the crystals */
+
+.crystalimg {
+	width: 150px;
+	margin: 30px auto;
+}
